Fix Ask AI btn with sidepanl + mintlify dark mode (#675)

--- a/front/public/embed.css
+++ b/front/public/embed.css
@@ -93,7 +93,8 @@
   overflow: hidden;
 }
 
-[data-theme="dark"] #crawlchat-sidepanel {
+[data-theme="dark"] #crawlchat-sidepanel,
+.dark #crawlchat-sidepanel {
   border-left: 1px solid #222;
 }
 
